--- a/preprocessors/wikipedia/xtask/Cargo.toml
+++ b/preprocessors/wikipedia/xtask/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.5.27", features = ["derive"] }
-indicatif = { version = "0.17.9", features = ["rayon"] }
+
+clap = { workspace = true }
+indicatif = { workspace = true }
+tokio = { workspace = true }
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 subprocess = "0.2.9"
-tokio = { version = "1.43.0", features = ["macros", "fs", "rt-multi-thread"] }
