--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,9 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_yaml = "0.9.34"
 tokio-stream = "0.1.17"
+
+# TODO: Use Mb/s instead of files/sec to find optimization
+[profile.release]
+opt-level = 3
+codegen-units = 64
+lto = "fat"
