--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,12 @@ serde_json = "1.0.137"
 serde_yaml = "0.9.34"
 tokio-stream = "0.1.17"
 
-# TODO: Use Mb/s instead of files/sec to find optimization
+# From hyperfine benchmarks,
+# I found that generally:
+# 1. lto="thin" > "off" >> "fat"
+# 2. codegen_units: higher the better
+# 3. opt-level: 2 > 1 > 3 > 0
 [profile.release]
-opt-level = 3
-codegen-units = 64
-lto = "fat"
+opt-level = 2
+codegen-units = 256
+lto = "thin"
