--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_yaml = "0.9.34"
 tokio-stream = "0.1.17"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+tracing-indicatif = "0.3.9"
 
 # From hyperfine benchmarks,
 # I found that generally:
